examples/test/testpolicy16430.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16430
  namespace: namespace324
spec:
  podSelector:
    matchLabels:
      key39: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value14
          key39: value36
      podSelector:
        matchLabels:
          key22: value24
          key47: value34
          key21: value30
